--- a/DatingApp-spa/src/app/app.component.html
+++ b/DatingApp-spa/src/app/app.component.html
@@ -1,2 +1,4 @@
-<router-outlet></router-outlet>
-<app-value></app-value>
+<!-- <router-outlet></router-outlet> -->
+<app-nav></app-nav>
+<app-home></app-home>
+
