--- a/DatingApp-spa/src/app/app.component.html
+++ b/DatingApp-spa/src/app/app.component.html
@@ -1,4 +1,4 @@
-<!-- <router-outlet></router-outlet> -->
 <app-nav></app-nav>
-<app-home></app-home>
-
+<router-outlet></router-outlet>
+<!--
+<app-home></app-home> -->
